added branch to deployment circleci section

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ tests:
 
 deployment:
   production:
+    branch: master
     commands:
       - bundle exec nanoc compile
       - bundle exec nanoc deploy
