nginx.conf, added fonts to ignoring

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
                 try_files $uri $uri/ $uri.html /index.html;
         }
 
-        location ~ /(css|js|images) {
+        location ~ /(css|js|images|fonts) {
         }
 
         location ~ {
