--- a/Rules
+++ b/Rules
@@ -10,6 +10,12 @@ compile '/**/*.html' do
   layout '/default.*'
 end
 
+compile '/images/stripes/*', rep: :fit do
+  filter :thumbnailize, width: 1920
+  filter :jpegize
+  write "#{item.identifier.without_ext}-fit.jpg"
+end
+
 # This is an example rule that matches Markdown (.md) files, and filters them
 # using the :kramdown filter. It is commented out by default, because kramdown
 # is not bundled with Nanoc or Ruby.
