--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -93,5 +93,5 @@ deploy:
   default:
     kind: rsync
     dst:  "swistak35@idefix.swistak35.com:apps/emilka.idefix.swistak35.com"
-    options: ['-gpPrtvz', '--delete-after', '-e', 'ssh -p 1337 -i ~/.ssh/id_circleci_github']
+    options: ['-gpPrtvz', '--delete-after', '-e', 'ssh -p 1337']
 
